<resources>
    <string name="app_name">FinMobile</string>
    <string name="inside">Continue</string>
    <string name="title_activity_login">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_">"Login"</string>
    <string name="register">"Register"</string>
    <string name="or_register_new_group">Or register new group</string>
    <string name="forgot_password">forgot password?</string>
    <string name="todo">TODO</string>
    <string name="_1_group_details">Group Details</string>
    <string name="group_type">Group Type</string>
    <string name="group_name">Group name</string>
    <string name="enter_group_name">enter group name</string>
    <string name="number_of_numbers">Number of members</string>
    <string name="cycle_starting_date">Cycle starting date</string>
    <string name="cycle_end_date">Cycle end date</string>
    <string name="member_details">Member details</string>

    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="group_post">Group Post</string>
    <string name="address">Current home address</string>
    <string name="home_address">enter home address</string>
    <string name="password">Password</string>
    <string name="full_name">Full name</string>
    <string name="reg">Register</string>
    <string name="already">Already have a group?</string>

    <string-array name="type_array">
        <item>Village bank/banki nkhonde</item>
        <item>Usury/chipelegano</item>

    </string-array>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_me">Me</string>
    <string name="nav_group">Group</string>
    <string name="nav_events">Events </string>
    <string name="nav_chatroom">Chatroom</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_member_management">Member Management</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_add_members">Add members</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>My Profile</item>
        <item>Group</item>
        <item>Events</item>
        <item>Chatroom</item>
        <item>Notifications</item>


    </string-array>


    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_settings">Settings</string>
    <string name="activity_title_addmembers">Add Members</string>
    <string name="activity_title_membersloans">Member loans</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Other</string>
    <string name="user_name">Username</string>
    <string name="facet_technologies">FACET TECHNOLOGIES</string>
    <string name="group_balance">Group balance</string>
    <string name="_1_000_000">1,000,000</string>
    <string name="enter_phone_number">enter phone number</string>
    <string name="village_bank_chipelegano">village bank/ chipelegano</string>
    <string name="notifications">Notifications</string>
    <string name="me">Me</string>


    <string name="chiyanjano_kamwendo">Chiyanjano Kamwendo</string>
    <string name="loans">Loan Balance</string>
    <string name="contributions">Contributions</string>
    <string name="social_welfare">Social Welfare</string>
    <string name="fines">Fines</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="no_recent_transactions">No recent Transactions</string>
    <string name="button">Button</string>
    <string name="request_loan">Request Loan</string>
    <string name="member_management">Member Management</string>
    <string name="amount">Amount</string>
    <string name="enter_amount_in_kwacha">enter amount in kwacha</string>
    <string name="loan_period">Loan period</string>
    <string name="add_members">Add members</string>
    <string name="member_loans">Member loans</string>
    <string name="settings">Settings</string>
    <string name="member_lists">member lists</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dashboard">Dashboard</string>
    <string name="member_admin">Member / Admin</string>
    <string name="enter_full_name">enter full name</string>
    <string name="enter_period_in_months_for_payment">enter period in months for payment</string>
    <string name="payment_period_in_months">payment period in months</string>
    <string name="apply">Apply</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="name_of_group">name of group</string>
    <string name="welfare">Welfare</string>
    <string name="loan">loans</string>
    <string name="mode_of_payment">mode of payment</string>
    <string name="date_of_payment">date of payment</string>
    <string name="undo">Undo</string>
    <string name="mwk">MWK</string>
    <string name="paid_through">Paid through:</string>
    <string name="member_name">Member name</string>
    <string name="month_of_payment">month of payment</string>
    <string name="month">month</string>
    <string name="date">date</string>


</resources>
