<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Register"
    tools:visibility="visible">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="186dp"
                android:layout_height="175dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                app:srcCompat="@drawable/logo"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:layout_marginTop="1dp"
                android:text="@string/member_details"
                android:textColor="@color/facetgold"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="12dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_post"
                android:text="@string/address"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/current_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/home_address"
                android:inputType="text"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_home_address"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor"
                tools:targetApi="o" />



            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:text="@string/phone_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView13"
                android:autofillHints=""
                android:hint="@string/enter_phone_number"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:layout_below="@id/password"
                android:text="@string/submit" />


            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/group_name2"
                android:text="@string/group_post" />

            <EditText
                android:id="@+id/group_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView25"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/member_admin"
                android:autofillHints="" />

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_below="@+id/Full_name"
                android:layout_height="wrap_content"
                android:text="@string/group_name" />

            <EditText
                android:id="@+id/group_name2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_below="@+id/group"
                android:inputType="textPersonName"
                android:hint="@string/name_of_group"
                android:autofillHints="" />


        </RelativeLayout>


    </LinearLayout>


</ScrollView>


