<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".Register"
    tools:visibility="visible">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="100dp"
                app:srcCompat="@drawable/logo"
                tools:ignore="ContentDescription"
                android:layout_marginLeft="100dp" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageView3"
                android:text="@string/_1_group_details"
                android:textColor="@color/facetgold"
                android:textSize="30sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:layout_marginTop="15dp"
                android:text="@string/group_type"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_marginTop="60dp"
                android:text="@string/group_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView3"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_group_name"
                android:inputType="textPersonName"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_name"
                android:layout_marginTop="25dp"
                android:text="@string/number_of_numbers"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/number_of_members"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView4"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/number_of_members"
                android:layout_marginTop="25dp"
                android:text="@string/cycle_starting_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic"

                />

            <EditText
                android:id="@+id/cycle_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView5"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cycle_start_date"
                android:layout_marginTop="30dp"
                android:text="@string/cycle_end_date"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/cycle_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView6"
                android:autofillHints=""
                android:ems="10"
                android:focusable="false"
                android:inputType="date"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cycle_end_date"
                android:text="@string/member_details"
                android:layout_marginTop="40dp"
                android:textColor="@color/facetgold"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="40dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView8"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Full_name"
                android:text="@string/address"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/current_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView9"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/home_address"
                android:inputType="text"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/current_home_address"
                android:text="@string/email"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView10"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textEmailAddress"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_number"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView11"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                tools:ignore="LabelFor"
                tools:targetApi="o" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:text="@string/phone_number"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView13"
                android:autofillHints=""
                android:hint="@string/enter_phone_number"
                android:ems="10"
                android:inputType="phone"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:layout_below="@id/password"
                android:text="@string/reg" />


            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:textStyle="italic"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_button3"
                android:textColor="@color/white"
                android:layout_below="@id/textView12"
                android:layout_height="wrap_content"
                android:text="@string/login_" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:layout_below="@id/button2"
                android:text="@string/already"
                android:layout_marginLeft="150dp" />

            <EditText
                android:id="@+id/group_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/village_bank_chipelegano"
                android:layout_below="@id/textView2"
                android:inputType="text"
                android:autofillHints=""
                tools:targetApi="o"
                tools:ignore="LabelFor" />



        </RelativeLayout>


    </LinearLayout>


</ScrollView>


